[gd_scene load_steps=32 format=2]

[ext_resource path="res://scenes/generic/craft_menu/CraftMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/generic/craft_menu/item_button.gd" type="Script" id=2]
[ext_resource path="res://scenes/generic/craft_menu/box.gd" type="Script" id=3]
[ext_resource path="res://resources/styles/workbench/survival_ui_workbench.png" type="Texture" id=4]
[ext_resource path="res://resources/styles/workbench/survival_ui_9cellframe.png" type="Texture" id=5]
[ext_resource path="res://resources/styles/workbench/survival_ui_button1.png" type="Texture" id=6]
[ext_resource path="res://resources/styles/workbench/survival_ui_button2.png" type="Texture" id=7]
[ext_resource path="res://resources/styles/workbench/survival_ui_close1.png" type="Texture" id=8]
[ext_resource path="res://resources/styles/workbench/survival_ui_close2.png" type="Texture" id=9]
[ext_resource path="res://resources/textures/icons/survival_icon_hatchet.png" type="Texture" id=10]
[ext_resource path="res://resources/textures/icons/survival_icon_bandage.png" type="Texture" id=11]
[ext_resource path="res://resources/textures/icons/survival_icon_vase_full.png" type="Texture" id=12]
[ext_resource path="res://resources/textures/icons/survival_icon_metal.png" type="Texture" id=13]
[ext_resource path="res://resources/textures/icons/survival_icon_crossbow.png" type="Texture" id=14]
[ext_resource path="res://resources/textures/icons/survival_icon_knife.png" type="Texture" id=15]
[ext_resource path="res://resources/textures/icons/survival_icon_strand.png" type="Texture" id=16]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 240, 180 )

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 48, 48 )
margin_left = 6.33978
margin_right = 5.8521
margin_top = 5.8521
margin_bottom = 5.8521
modulate_color = Color( 0.156863, 0.494118, 0.458824, 0.647059 )

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 48, 48 )
margin_left = 5.72165
margin_right = 5.28152
margin_top = 6.16177
margin_bottom = 5.28152
modulate_color = Color( 0.105882, 0.686275, 0.627451, 0.647059 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 1, 48, 46 )
margin_left = 8.98105
margin_right = 5.38863
margin_top = 4.19116
margin_bottom = 4.19116
modulate_color = Color( 0.105882, 0.686275, 0.627451, 0.647059 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 48, 48 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 48, 48 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 48, 48 )
modulate_color = Color( 0.243137, 0.243137, 0.243137, 1 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 48, 48 )
margin_left = 6.16011
margin_right = 4.10674
margin_top = 7.18679
margin_bottom = 5.13342

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 48, 48 )
margin_left = 6.68993
margin_right = 5.85369
margin_top = 6.67345
margin_bottom = 6.16011
modulate_color = Color( 0.352941, 0.352941, 0.352941, 1 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 48, 48 )
margin_left = 6.27181
margin_right = 5.37729
margin_top = 5.43556
margin_bottom = 5.73578

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 32, 32 )
modulate_color = Color( 0.247059, 0.243137, 0.243137, 1 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 32, 32 )

[node name="CraftMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
self_modulate = Color( 0.0666667, 0.529412, 0.560784, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.440125
margin_top = 1.36557
margin_right = 0.440125
margin_bottom = 1.36557
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_panel" type="Panel" parent="Control"]
anchor_left = 0.2
anchor_top = 0.25
anchor_right = 0.8
anchor_bottom = 0.75
margin_top = 7.62939e-06
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="receipts" type="ScrollContainer" parent="Control/menu_panel"]
anchor_left = 0.12
anchor_top = 0.133
anchor_right = 0.435
anchor_bottom = 0.878
margin_left = -0.0800018
margin_top = 0.0599995
margin_right = -0.0400085
margin_bottom = -0.0400085
rect_min_size = Vector2( 75, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="box" type="VBoxContainer" parent="Control/menu_panel/receipts"]
margin_right = 110.0
margin_bottom = 248.0
rect_min_size = Vector2( 110, 164 )
script = ExtResource( 3 )

[node name="Knife" type="Button" parent="Control/menu_panel/receipts/box"]
margin_right = 110.0
margin_bottom = 32.0
rect_min_size = Vector2( 110, 32 )
focus_mode = 0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 15 )
enabled_focus_mode = 0
text = "Knife"
icon = ExtResource( 15 )
expand_icon = true
script = ExtResource( 2 )
item_id = "Knife"
material_1 = "Potato"
material_1_qtd = 3
material_2_qtd = 3

[node name="FlowerPot" type="Button" parent="Control/menu_panel/receipts/box"]
margin_top = 36.0
margin_right = 110.0
margin_bottom = 68.0
rect_min_size = Vector2( 110, 32 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 15 )
text = "Pot"
icon = ExtResource( 12 )
expand_icon = true
script = ExtResource( 2 )
item_id = "FlowerPot"

[node name="Bandage" type="Button" parent="Control/menu_panel/receipts/box"]
margin_top = 72.0
margin_right = 110.0
margin_bottom = 104.0
rect_min_size = Vector2( 110, 32 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 15 )
text = "Bandage"
icon = ExtResource( 11 )
expand_icon = true
script = ExtResource( 2 )
item_id = "Bandage"

[node name="Hatchet" type="Button" parent="Control/menu_panel/receipts/box"]
margin_top = 108.0
margin_right = 110.0
margin_bottom = 140.0
rect_min_size = Vector2( 110, 32 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 15 )
text = "Hatchet"
icon = ExtResource( 10 )
expand_icon = true
script = ExtResource( 2 )
item_id = "Hatchet"

[node name="Strand" type="Button" parent="Control/menu_panel/receipts/box"]
margin_top = 144.0
margin_right = 110.0
margin_bottom = 176.0
rect_min_size = Vector2( 110, 32 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 15 )
text = "Strand"
icon = ExtResource( 16 )
expand_icon = true
script = ExtResource( 2 )
item_id = "Strand"

[node name="Metal" type="Button" parent="Control/menu_panel/receipts/box"]
margin_top = 180.0
margin_right = 110.0
margin_bottom = 212.0
rect_min_size = Vector2( 110, 32 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 15 )
text = "Metal"
icon = ExtResource( 13 )
expand_icon = true
script = ExtResource( 2 )
item_id = "Metal"

[node name="Crossbow" type="Button" parent="Control/menu_panel/receipts/box"]
margin_top = 216.0
margin_right = 110.0
margin_bottom = 248.0
rect_min_size = Vector2( 110, 32 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 15 )
text = "Crossbow"
icon = ExtResource( 14 )
expand_icon = true
script = ExtResource( 2 )
item_id = "Crossbow"

[node name="craft" type="Panel" parent="Control/menu_panel"]
anchor_left = 0.25
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 87.0
margin_bottom = 1.52588e-05
rect_min_size = Vector2( 0, 180 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item" type="Panel" parent="Control/menu_panel/craft"]
anchor_left = 0.353
anchor_top = 0.144
anchor_right = 0.512
anchor_bottom = 0.322
margin_left = 1.047
margin_top = 0.079998
margin_right = 1.08806
margin_bottom = 0.0399895
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="Control/menu_panel/craft/item"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 32, 32 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="material" type="Panel" parent="Control/menu_panel/craft"]
anchor_left = 0.04
anchor_top = 0.444
anchor_right = 0.846
anchor_bottom = 0.622
margin_left = -0.0400009
margin_top = 0.0799866
margin_right = -0.0460052
margin_bottom = 0.0399857
rect_min_size = Vector2( 0, 32 )
custom_styles/panel = SubResource( 4 )

[node name="materials" type="HBoxContainer" parent="Control/menu_panel/craft/material"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 162, 32 )
custom_constants/separation = 24
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="material1" type="Panel" parent="Control/menu_panel/craft/material/materials"]
margin_left = 9.0
margin_right = 41.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 6 )

[node name="texture" type="TextureRect" parent="Control/menu_panel/craft/material/materials/material1"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="material2" type="Panel" parent="Control/menu_panel/craft/material/materials"]
margin_left = 65.0
margin_right = 97.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 6 )

[node name="texture" type="TextureRect" parent="Control/menu_panel/craft/material/materials/material2"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="material3" type="Panel" parent="Control/menu_panel/craft/material/materials"]
margin_left = 121.0
margin_right = 153.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 6 )

[node name="texture" type="TextureRect" parent="Control/menu_panel/craft/material/materials/material3"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CRAFT" type="Button" parent="Control"]
anchor_left = 0.567
anchor_top = 0.592
anchor_right = 0.685
anchor_bottom = 0.681
margin_left = 0.000244141
margin_top = 0.119507
margin_right = -0.519775
margin_bottom = 0.079483
rect_min_size = Vector2( 75, 32 )
focus_mode = 0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 7 )
disabled = true
text = "CRAFT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EXIT" type="Button" parent="Control"]
anchor_left = 0.736
anchor_top = 0.252
anchor_right = 0.786
anchor_bottom = 0.341
margin_left = -0.0159302
margin_top = -0.0159454
margin_right = -0.0158997
margin_bottom = -0.055954
focus_mode = 0
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="selected" from="Control/menu_panel/receipts/box" to="." method="_on_pressed"]
[connection signal="pressed" from="Control/CRAFT" to="." method="_on_CRAFT_pressed"]
[connection signal="pressed" from="Control/EXIT" to="." method="_on_EXIT_pressed"]
